routing-api/overlays/routing-api-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: routing-api
spec:
  entryPoints:
    - web
    # - websecure
  routes:
    - match: Host(`${ROUTING_API_FQDN}`)
      #middlewares:
      #  - name: api-headers-middleware
      #  - name: api-ratelimit-middleware
      #  - name: api-inflightreq-middleware
      kind: Rule
      services:
        - kind: Service
          name: routing-api
          port: 8082
  # tls:
  #   secretName: ${SECRET_NAME} # api-tls # cert-dev
  #   domains:
  #     - main: ${BASE_DOMAIN}
  #       sans:
  #         - '*.preview.${BASE_DOMAIN}'
  #         - '*.testing.${BASE_DOMAIN}'


#exposition des services par association d'un fqdn et ip Custom ressource definition
