routing-api/overlays/web_nw_networkpolicy_namespaceselector.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-nw
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          com.capgemini.mcm-maas.ingress: "true"
